Closes #588: Adding Maximum Embargo Length

--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -90,3 +90,6 @@ RservePort=6311
 RserveUser=rserve
 RservePassword=rserve
 RserveTempDir=/tmp/
+
+# MaximumEmbargo (in months)
+MaximumEmbargoLength=0
