--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
-os: linux
-dist: trusty
-
 language: java
 jdk:
-  - oraclejdk8
+  - openjdk8
 script: mvn -DcompilerArgument=-Xlint:unchecked test -P all-unit-tests
 after_success: mvn jacoco:report coveralls:report
