--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -58,7 +58,7 @@ MetricsCacheTimeoutMinutes=10080
 MinutesUntilConfirmEmailTokenExpires=1440
 # 100MB
 ZipDownloadLimit=104857600
-ZipUploadFilesLimit=0
+ZipUploadFilesLimit=1000
 MultipleUploadFilesLimit=1000
 GuestbookResponsesPageDisplayLimit=5000
 TabularIngestSizeLimit=-1
