added missing account type file keys.

--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -114,3 +114,5 @@ SearchHighlightFragmentSize=320
 PVDictionaries=
 PVCustomPasswordResetAlertMessage=
 RepositoryStorageAbstractionLayerUrl=
+DebugShibAccountType=PRODUCTION
+DebugOAuthAccountType=PRODUCTION
