#906: Add importers base and part of UI

--- a/dataverse-webapp/pom.xml
+++ b/dataverse-webapp/pom.xml
@@ -44,6 +44,11 @@
         </dependency>
         <dependency>
             <groupId>edu.harvard.iq</groupId>
+            <artifactId>dataverse-ext-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.harvard.iq</groupId>
             <artifactId>dataverse-persistence</artifactId>
             <version>${project.version}</version>
             <classifier>tests</classifier>
