--- a/dataverse-ext-common/pom.xml
+++ b/dataverse-ext-common/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <artifactId>dataverse-ext-common</artifactId>
+    <artifactId>dataverse-extension-common</artifactId>
     <packaging>jar</packaging>
 
     <parent>
@@ -18,7 +18,6 @@
         <dependency>
             <groupId>org.omnifaces</groupId>
             <artifactId>omnifaces</artifactId>
-            <version>2.7.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
