--- a/dataverse-webapp/pom.xml
+++ b/dataverse-webapp/pom.xml
@@ -146,11 +146,13 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
+            <version>2.5.1</version>
         </dependency>
         <!-- Should be refactored and removed once on Java EE 8 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>2.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.scribe</groupId>
