Closes #1067: reverted properties changes that should not be propagated

--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -38,7 +38,7 @@ DataFilePIDFormat=DEPENDENT
 IdentifierGenerationStyle=randomString
 DefaultAuthProvider=builtin
 FileFixityChecksumAlgorithm=MD5
-GuidesBaseUrl=http://guides.dataverse.org
+GuidesBaseUrl=http://localhost:8080/guides
 IP_WHITELIST_KEY=127.0.0.1;::1
 FooterCustomizationFile=
 HeaderCustomizationFile=
