--- a/dataverse-webapp/pom.xml
+++ b/dataverse-webapp/pom.xml
@@ -502,17 +502,17 @@
         <dependency>
             <groupId>org.openpreservation.jhove</groupId>
             <artifactId>jhove-core</artifactId>
-            <version>1.20.1</version>
+            <version>${jhove.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openpreservation.jhove</groupId>
             <artifactId>jhove-modules</artifactId>
-            <version>1.20.1</version>
+            <version>${jhove.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openpreservation.jhove</groupId>
             <artifactId>jhove-ext-modules</artifactId>
-            <version>1.20.1</version>
+            <version>${jhove.version}</version>
         </dependency>
 
         <!-- EXPERIMENTAL: -->
