Closes #1549: Add mechanism for fetching citation counts from DataCite

--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -73,6 +73,8 @@ MaxFileUploadSizeInBytes=
 CustomDatasetSummaryFields=dsDescription,subject,keyword,publication,notesText
 #Old Jvm options
 DropboxKey=
+DoiDataCiteCitationsPageUrl=https://commons.datacite.org/doi.org
+DoiDataCiteRestApiUrl=https://api.test.datacite.org
 DoiBaseUrlString=https://mds.test.datacite.org
 DoiUsername=dataciteuser
 DoiPassword=datacitepassword
@@ -126,4 +128,5 @@ AntivirusScannerSocketPort=3310
 AntivirusScannerSocketTimeout=60000
 
 FilesIntegrityCheckTimerExpression=0 0 1 * *
+CitationCountUpdateTimerExpression=
 ReadonlyMode=false
