--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -126,9 +126,15 @@ AntivirusScannerSocketPort=3310
 AntivirusScannerSocketTimeout=60000
 
 FilesIntegrityCheckTimerExpression=0 0 1 * *
+
 # Following three options depend on application used.
 # E.g for unrar these will be: unrar/l/-
 RarDataUtilCommand=
 RarDataUtilOpts=
 RarDataLineBeforeResultDelimiter=
+
+# Max sizes of input and output file for calculation of gzip uncompressed size
+GzipMaxInputFileSizeInBytes=
+GzipMaxOutputFileSizeInBytes=
+
 ReadonlyMode=false
