Closes #1601: add property values

--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -134,7 +134,8 @@ RarDataUtilOpts=
 RarDataLineBeforeResultDelimiter=
 
 # Max sizes of input and output file for calculation of gzip uncompressed size
-GzipMaxInputFileSizeInBytes=
-GzipMaxOutputFileSizeInBytes=
+# Empty values will be treated as zeros
+GzipMaxInputFileSizeInBytes=0
+GzipMaxOutputFileSizeInBytes=0
 
 ReadonlyMode=false
