--- a/dataverse-webapp/src/main/resources/config/saml.properties
+++ b/dataverse-webapp/src/main/resources/config/saml.properties
@@ -11,7 +11,7 @@ onelogin.saml2.debug =  false
 ################################################
 
 #  Identifier of the SP entity  (must be a URI)
-onelogin.saml2.sp.entityid = {HOST}/saml
+onelogin.saml2.sp.entityid = {HOST}/saml/metadata
 
 # Specifies info about where and how the <AuthnResponse> message MUST be
 #  returned to the requester, in this case our SP.
