--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -182,6 +182,6 @@ SamlWrapHttpRequestUrl=true
 # holds the text which will be shown on the login page, above the "Log in" header
 LoginInfo=
 
-# Select dataverse info with locale suffixes (eg. LocaleInfo.pl; default english without suffix)
+# Select dataverse info with locale suffixes (eg. SelectDataverseInfo.pl; default english without suffix)
 # holds the text which will be shown on top of the "Add dataset" dialog
 SelectDataverseInfo=
