feature/79 Externalized cookie session configuration

--- a/dataverse-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/dataverse-webapp/src/main/webapp/WEB-INF/web.xml
@@ -175,6 +175,10 @@
         <!-- Uncomment the line below to disble `;jsessionid=` in URLs -->
 	    <tracking-mode>COOKIE</tracking-mode>
     </session-config>
+    <!-- Listener to override defaults with environment variables -->
+    <listener>
+        <listener-class>edu.harvard.iq.dataverse.DataverseSessionConfigListener</listener-class>
+    </listener>
     <!-- web fonts -->
     <mime-mapping>
         <extension>eot</extension>
