Closes #2534: Configurable additional links in the footer

--- a/dataverse-webapp/src/main/resources/config/dataverse.default.properties
+++ b/dataverse-webapp/src/main/resources/config/dataverse.default.properties
@@ -126,6 +126,8 @@ ShowAccessibilityStatementFooterLink=false
 BlockedApiKey=
 BuiltinUsers.KEY=
 FooterCopyright=
+#FooterAdditionalUrl=[{"url":"http://example.com", "title.pl":"Ta daa", "title.en":"Something"}]
+FooterAdditionalUrl=[]
 ApplicationPrivacyPolicyUrl=
 #NavbarAboutUrl=[{"url":"http://example.com", "title.pl":"O repozytorium", "title.en":"About repository"}]
 NavbarAboutUrl=[]
