Closes: Fieldset_validator_for_releated_fields
Co-authored-by: Filipe Dias Lewandowski fdias@icm.edu.pl
Co-authored-by: Krzysztof Mądry k.madry@icm.edu.pl
Co-authored-by: Sylwester Niewczas sniewcza@icm.edu.pl

Signed-off-by: Daniel Korbel dkorbel@icm.edu.pl

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <spring.version>4.1.9.RELEASE</spring.version>
 
         <junit.version>5.5.2</junit.version>
-        <mockito.version>2.22.0</mockito.version>
+        <mockito.version>3.12.4</mockito.version>
         <!--
         Jacoco 0.8.2 seems to break Netbeans code coverage integration so we'll use 0.8.1 instead.
         See https://github.com/jacoco/jacoco/issues/772 for discussion of how the XML changed.
@@ -710,6 +710,12 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
