--- a/dataverse-dist/pom.xml
+++ b/dataverse-dist/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>edu.harvard.iq</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>4.11</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>dataverse-dist</artifactId>
