--- a/dataverse-persistence/pom.xml
+++ b/dataverse-persistence/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.harvard.iq</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>4.11</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>dataverse-persistence</artifactId>
@@ -66,6 +66,18 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes><include>**/*.properties</include></includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes><exclude>**/*.properties</exclude></excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
