--- a/dataverse-test-common/pom.xml
+++ b/dataverse-test-common/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.harvard.iq</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>4.11</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>dataverse-test-common</artifactId>
