--- a/dataverse-webapp/pom.xml
+++ b/dataverse-webapp/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>edu.harvard.iq</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>4.11</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <name>dataverse-webapp</name>
