--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     -->
     <groupId>edu.harvard.iq</groupId>
     <artifactId>dataverse-parent</artifactId>
-    <version>4.11</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>dataverse-parent</name>
@@ -930,6 +930,14 @@
                     <consoleOutput>true</consoleOutput>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -950,4 +958,11 @@
         </profile>
         <!-- TODO: Add a profile to run API tests (integration tests that end in IT.java. See conf/docker-aio/run-test-suite.sh -->
     </profiles>
+
+    <scm>
+        <url>https://github.com/CeON/dataverse.git</url>
+        <connection>scm:git:git@github.com:CeON/dataverse.git</connection>
+        <developerConnection>scm:git:git@github.com:CeON/dataverse.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
