jenkins build config

--- a/pom.xml
+++ b/pom.xml
@@ -968,6 +968,19 @@
         <profile>
             <id>all-unit-tests</id>
         </profile>
+        <profile>
+            <id>all-integration-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <!-- TODO: Add a profile to run API tests (integration tests that end in IT.java. See conf/docker-aio/run-test-suite.sh -->
     </profiles>
 
