--- a/pom.xml
+++ b/pom.xml
@@ -1017,6 +1017,13 @@
                 <test.docker.executeStopOnVMShutdown>true</test.docker.executeStopOnVMShutdown>
             </properties>
         </profile>
+        <profile>
+            <id>deploy</id>
+            <properties>
+                <skipTests>true</skipTests>
+                <docker.skip>true</docker.skip>
+            </properties>
+        </profile>
         <!-- TODO: Add a profile to run API tests (integration tests that end in IT.java. See conf/docker-aio/run-test-suite.sh -->
     </profiles>
 
