--- a/dataverse-test-common/pom.xml
+++ b/dataverse-test-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>edu.harvard.iq</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>dataverse-test-common</artifactId>
