--- a/dataverse-dist/pom.xml
+++ b/dataverse-dist/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>edu.harvard.iq</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>dataverse-dist</artifactId>
