--- a/dataverse-webapp/pom.xml
+++ b/dataverse-webapp/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>edu.harvard.iq</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
 
     <name>dataverse-webapp</name>
