--- a/dataverse-persistence/pom.xml
+++ b/dataverse-persistence/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>edu.harvard.iq</groupId>
+        <groupId>pl.edu.icm.dataverse</groupId>
         <artifactId>dataverse-parent</artifactId>
         <version>1.0.4-SNAPSHOT</version>
     </parent>
@@ -52,7 +52,7 @@
         </dependency>
 
         <dependency>
-            <groupId>edu.harvard.iq</groupId>
+            <groupId>pl.edu.icm.dataverse</groupId>
             <artifactId>dataverse-test-common</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
