--- a/dataverse-test-common/pom.xml
+++ b/dataverse-test-common/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>edu.harvard.iq</groupId>
+        <groupId>pl.edu.icm.dataverse</groupId>
         <artifactId>dataverse-parent</artifactId>
         <version>1.0.4-SNAPSHOT</version>
     </parent>
