--- a/dataverse-webapp/pom.xml
+++ b/dataverse-webapp/pom.xml
@@ -6,7 +6,7 @@
     <packaging>war</packaging>
 
     <parent>
-        <groupId>edu.harvard.iq</groupId>
+        <groupId>pl.edu.icm.dataverse</groupId>
         <artifactId>dataverse-parent</artifactId>
         <version>1.0.4-SNAPSHOT</version>
     </parent>
@@ -24,7 +24,7 @@
     <!-- TODO: Housekeeping is utterly needed. -->
     <dependencies>
         <dependency>
-            <groupId>edu.harvard.iq</groupId>
+            <groupId>pl.edu.icm.dataverse</groupId>
             <artifactId>dataverse-persistence</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -626,13 +626,13 @@
 
         <!-- Test dependencies -->
         <dependency>
-            <groupId>edu.harvard.iq</groupId>
+            <groupId>pl.edu.icm.dataverse</groupId>
             <artifactId>dataverse-test-common</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>edu.harvard.iq</groupId>
+            <groupId>pl.edu.icm.dataverse</groupId>
             <artifactId>dataverse-persistence</artifactId>
             <version>${project.version}</version>
             <classifier>tests</classifier>
