--- a/dataverse-test-common/pom.xml
+++ b/dataverse-test-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>pl.edu.icm.dataverse</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.0.4</version>
     </parent>
 
     <artifactId>dataverse-test-common</artifactId>
