--- a/dataverse-webapp/pom.xml
+++ b/dataverse-webapp/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>pl.edu.icm.dataverse</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.0.4</version>
     </parent>
 
     <name>dataverse-webapp</name>
