--- a/dataverse-persistence/pom.xml
+++ b/dataverse-persistence/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>pl.edu.icm.dataverse</groupId>
         <artifactId>dataverse-parent</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.6</version>
     </parent>
 
     <artifactId>dataverse-persistence</artifactId>
