Closes #2572: Created controlled vocabulary enhanced select input
Co-authored-by: Szymon Drawski sdrawski@icm.edu.pl
Co-authored-by: Krzysztof Mądry <k.madry@icm.edu.pl>
Co-authored-by: Filipe Dias Lewandowski

Signed-off-by: Daniel Korbel <dkorbel@icm.edu.pl>

--- a/dataverse-webapp/.gitignore
+++ b/dataverse-webapp/.gitignore
@@ -1,3 +1,5 @@
 # do not track auto generated css files
 src/main/webapp/resources/vecler/*.css
 src/main/webapp/resources/vecler/*.css.map
+/.apt_generated/
+/.apt_generated_tests/
